# gr_raytracer

./: .gitignore  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  RUST_IMPROVEMENTS.md  euclidean-spherical.toml  euclidean.toml  kerr-volumetric-stony.toml  kerr-volumetric-streaky.toml  kerr.toml  schwarzschild-volumetric-dense.toml  schwarzschild-volumetric-stony.toml  schwarzschild-volumetric-streaky.toml  schwarzschild.toml
.github/: dependabot.yml
docs/: config-schema.md  config.schema.json  example-render-commands.md
images/: create-main-image.sh  images.md
scene-definitions/: euclidean-spherical.toml  euclidean.toml  kerr-bl-volumetric-stony.toml  kerr-bl-volumetric-streaky.toml  kerr-bl.toml  kerr-sphere.toml  kerr-volumetric-stony.toml  kerr-volumetric-streaky.toml  kerr.toml  schwarzschild-blackbody-disc.toml  schwarzschild-sphere.toml  schwarzschild-volumetric-dense.toml  schwarzschild-volumetric-stony.toml  schwarzschild-volumetric-streaky.toml  schwarzschild.toml
scripts/: Readme.md  create_camera_trajectory.py  create_images_from_camera_positions.py  create_kerr_images.sh  create_movie_from_images.sh  create_rays.sh  create_rays_from_camera.sh  create_rays_positions.sh  create_uv_map.py  direction_plotter.py  plot_planar_trajectories.py  plot_trajectories_3d.py  requirements.txt  vector_plotter.py
src/: camera.rs  cli.rs  color.rs  configuration.rs  debug.rs  euclidean.rs  euclidean_spherical.rs  four_vector.rs  geometry.rs  hittable.rs  integrator.rs  main.rs  ray.rs  raytracer.rs  redshift.rs  runge_kutta.rs  scene.rs  schwarzschild.rs  texture.rs  (+1 more)
(+64 files in other folders)
