[package]
name = "gr_raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
image = "0.25.9"
rayon = "1.10.0"
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = "0.18.4"
log = "0.4.29"
env_logger = "0.11.9"
noise = "0.9"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
test-log = "0.2.19"
