[package]
name = "gr_raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.2"
image = "0.25.10"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = "0.18.4"
log = "0.4.29"
env_logger = "0.11.10"
noise = "0.9"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
test-log = "0.2.20"
